--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "todo-frontend",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "test": "jest -c jest.config.js",
+    "test:watch": "jest --watch",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -12,6 +13,7 @@
   "dependencies": {
     "@repo/types": "*",
     "@vee-validate/zod": "^4.15.0",
+    "@vue/vue3-jest": "^29.2.6",
     "@vueuse/core": "^12.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,10 +29,22 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/vue": "^8.1.0",
+    "@types/jest": "^29.5.14",
     "@types/vue": "^2.0.0",
     "@vue/runtime-core": "3.5.13",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "3"
+    "tailwindcss": "3",
+    "ts-jest": "^29.2.6",
+    "vite-jest": "^0.1.4"
   }
 }
